2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/ldml/Parser.java
	(Parser): Added support for 'era', 'eraAbbr' and 'eras' elements.

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendars): Generate the data for eras.

2004-11-12  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateJavaHeader): Put proper classpath license header into output.
	(generateContents): Remove unneeded whitestace in output.

2004-11-12  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/Main.java
	(printUsage): Exit app cleanly.

2004-11-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/ldml/ListDataElement.java
	(flattenLeaf): Return null if the element is not found.

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendar): Fix the access path for the calendar objects.

2004-08-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/javalocale, src/gnu/ldml: New LDML parser and GNU Classpath
	locale generator.

2004-08-11  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode: updated classes from Kawa 20040811

2004-08-02  C. Brian Jones <cbj@gnu.org>

	* src/gnu/classpath/tools/JavahMain.java: formatted
	* src/gnu/classpath/tools/JavapMain.java: ditto
	* src/gnu/classpath/tools/SerialVer.java: ditto
	* src/gnu/classpath/tools/Util.java: ditto
	* src/gnu/classpath/tools/Javap.java: renamed to Javaph.java
	and formatted with imports cleaned up
	* src/gnu/classpath/tools/README: fixed a few typos
	
2002-12-19  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode/README: point to Kawa for canonical version of 
	the gnu.bytecode package.

2002-12-18  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode/InnerClassesAttr.java (getClassNames): new 
	method allows other programs to get inner class names and their 
	proper access string.
	* src/gnu/bytecode/Variable.java (getOffset): new method allows 
	program to determine slot in LocalVariableTable.
	* src/gnu/bytecode/Variable.java (getStartPC): new method allows 