@@ -1,5 +1,11 @@
 2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>
 
+	* src/gnu/localegen/JavaGenerator.java
+	(TimeZoneContent.generateContent): Order zone names according to Java
+	standard.
+
+2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>
+
 	* src/gnu/ldml/Parser.java
 	(Parser): Added support for 'era', 'eraAbbr' and 'eras' elements.
 
